src/TestFiles/ASTTests/SyntaxErrorTests/tests/test3.c
typedef int int;

int main(){
    return 0;
};